2010-01-17  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* interpreter/container.txi (Creating Cell Arrays): Add
	docstring for cellslices function.

2010-01-09  John W. Eaton  <jwe@octave.org>

	* interpreter/munge-texi.cc: Avoid C-style casts.
	(main): Call usage if fewer than two arguments.

2009-12-20  Rik <octave@nomad.inbox5.com>

	* interpreter/geometryimages.m: Correctly set postscript output when QHULL
	library does not exist and sombrero image is printed.

2009-12-19  Rik <octave@nomad.inbox5.com>

	* Makefile.am, faq/Makefile.am, interpreter/Makefile.am,
	liboctave/Makefile.am, refcard/Makefile.am, interpreter/images.awk: 
	Eliminate TOPDIR variable in favor of built-in automake variables of 
	top_builddir and top_srcdir.

2009-12-17  Rik  <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: use automake syntax to build munge-texi.

2009-12-11  Rik  <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: remove install-local target and use automake 
	syntax to install doc-cache file.

2009-12-10  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Replace distdir-local with dist-hook rule as it
	is better supported by automake.

2009-12-10  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: new distdir-local rule to check for presence of
	necessary libraries before packaging distribution

2009-12-08  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Distribute all generated documentation (.pdf,
	.ps, .html, .dvi) to remove build requirement for TexInfo

2009-12-07  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am, faq/Makefile.am, liboctave/Makefile.am: Document
	use of NOTPARALLEL directive.

2009-12-07  Rik <octave@nomad.inbox5.com>

	* refcard/Makefile.am: Add CLEANFILES and MAINTAINERCLEANFILES objects to
	properly clean directory.

2009-12-05  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Set dependency of *.texi files on
	munge-texi source code rather than executable.
