@@ -1,3 +1,8 @@
+2010-01-20  John W. Eaton  <jwe@octave.org>
+
+	* interpreter/munge-texi.cc: Delete Emacs local-variable settings.
+	Untabify.
+
 2010-01-17  Thorsten Meyer  <thorsten.meyier@gmx.de>
 
 	* interpreter/container.txi (Creating Cell Arrays): Add
